# libui-scintilla

./: .gitmodules  CMakeLists.txt  gtk.cpp  ui_scintilla.h  win.cxx
include/: ui_scintilla.h
